[tool.poetry]
name = "rust-notebooks"
version = "0.1.0"
description = ""
authors = ["Paolo Angioletti"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
jupyterlab = "^4.2.3"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
